Heder end and categories start

--- a/Components/Pages/index.html
+++ b/Components/Pages/index.html
@@ -37,5 +37,109 @@
         <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
       </div>
     </nav>
+    <!---=======================END OF NAVBAR=====================-->
+
+    <header>
+      <div class="container header__container">
+        <div class="header__left">
+          <h1>Grow your skills to advance your career path</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+            provident est porro pariatur neque sit obcaecati perferendis quam
+            ducimus veniam!
+          </p>
+          <a href="course.html" class="btn btn-primary"> Get Start</a>
+        </div>
+        <div class="header__right">
+          <div class="header__right-image">
+            <img src="../../images//header.svg" />
+          </div>
+        </div>
+      </div>
+    </header>
+    <!--=================END OF HEADER=================-->
+
+    <section class="categories">
+      <div class="container categories__container">
+        <div class="categories__left">
+          <h1>Categories</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+            tempora modi sapiente provident ab. Velit, placeat sapiente. Ducimus
+            beatae exercitationem ea corrupti unde corporis neque culpa, amet
+            sequi pariatur eum.
+          </p>
+          <a href="#" class="btn">Learn More </a>
+        </div>
+        <div class="categories__right">
+          <!-- Category 1 -->
+          <article class="categories">
+            <span class="category__icon">
+              <i class="uil uil-bitcoin-circle"></i>
+              <h5>BlockChain</h5>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+                facilis.
+              </p></span
+            >
+          </article>
+          <!-- Category 2 -->
+          <article class="categories">
+            <span class="category__icon">
+              <i class="uil uil-bitcoin-circle"></i>
+              <h5>BlockChain</h5>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+                facilis.
+              </p></span
+            >
+          </article>
+          <!-- Category 3-->
+          <article class="categories">
+            <span class="category__icon">
+              <i class="uil uil-bitcoin-circle"></i>
+              <h5>BlockChain</h5>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+                facilis.
+              </p></span
+            >
+          </article>
+          <!-- Category 4-->
+          <article class="categories">
+            <span class="category__icon">
+              <i class="uil uil-bitcoin-circle"></i>
+              <h5>BlockChain</h5>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+                facilis.
+              </p></span
+            >
+          </article>
+          <!-- Category 5 -->
+          <article class="categories">
+            <span class="category__icon">
+              <i class="uil uil-bitcoin-circle"></i>
+              <h5>BlockChain</h5>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+                facilis.
+              </p></span
+            >
+          </article>
+          <!-- Category 6-->
+          <article class="categories">
+            <span class="category__icon">
+              <i class="uil uil-bitcoin-circle"></i>
+              <h5>BlockChain</h5>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+                facilis.
+              </p></span
+            >
+          </article>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
