category section & nav scrollY \ added

--- a/Components/Pages/index.html
+++ b/Components/Pages/index.html
@@ -73,73 +73,76 @@
         </div>
         <div class="categories__right">
           <!-- Category 1 -->
-          <article class="categories">
+          <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i>
+              <i class="uil uil-bitcoin-circle"></i></span>
               <h5>BlockChain</h5>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
                 facilis.
-              </p></span
-            >
+              </p>
           </article>
           <!-- Category 2 -->
-          <article class="categories">
+          <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i>
-              <h5>BlockChain</h5>
+              <i class="uil uil-bitcoin-circle"></i></span>
+              <h5>Graphic Design</h5>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
                 facilis.
-              </p></span
-            >
+              </p>
           </article>
           <!-- Category 3-->
-          <article class="categories">
+          <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i>
-              <h5>BlockChain</h5>
+              <i class="uil uil-bitcoin-circle"></i></span>
+              <h5>Finance</h5>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
                 facilis.
-              </p></span
-            >
+              </p>
           </article>
           <!-- Category 4-->
-          <article class="categories">
+          <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i>
-              <h5>BlockChain</h5>
+              <i class="uil uil-bitcoin-circle"></i></span>
+              <h5>Marketing</h5>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
                 facilis.
-              </p></span
-            >
+              </p>
           </article>
           <!-- Category 5 -->
-          <article class="categories">
+          <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i>
-              <h5>BlockChain</h5>
+              <i class="uil uil-bitcoin-circle"></i></span>
+              <h5>Music</h5>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
                 facilis.
-              </p></span
-            >
+              </p>
           </article>
           <!-- Category 6-->
-          <article class="categories">
+          <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i>
+              <i class="uil uil-bitcoin-circle"></i></span>
               <h5>BlockChain</h5>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
                 facilis.
-              </p></span
-            >
+              </p>
           </article>
         </div>
       </div>
     </section>
+
+
+
+
+
+
+
+
+<script src="../Main.js"></script>
   </body>
 </html>
