--- a/Components/styles/styles.css
+++ b/Components/styles/styles.css
@@ -39,8 +39,8 @@ body {
   width: var(--container-width-lg);
   margin: 0 auto;
 }
-.section {
-  padding: 6rem;
+section {
+  padding-top: 6rem;
 }
 
 section h2 {
@@ -112,6 +112,11 @@ nav {
   z-index: 11;
 }
 
+/* Change navbar styles on scroll using javascript */
+.window-scroll{
+  background: var(--color-primary);
+  box-sizing: 0 1rem 2rem rgba(0,0,0,0.2);
+}
 .nav__container {
   height: 100%;
   display: flex;
@@ -119,52 +124,103 @@ nav {
   align-items: center;
 }
 
-nav button{
-    display: none;
+nav button {
+  display: none;
 }
 
 .nav__menu {
-    display: flex;
-    align-items: center;
-    gap: 4rem;
+  display: flex;
+  align-items: center;
+  gap: 4rem;
 }
 
 .nav__menu a {
-    font-size:0.9rem;
-    transition: var(--transition);
+  font-size: 0.9rem;
+  transition: var(--transition);
 }
 
-.nav__menu a:hover{
-    color:var(--color-bg2)
+.nav__menu a:hover {
+  color: var(--color-bg2);
 }
 
 /* ===================== HEADER ==========*/
 
-header{
-    position: relative;
-    top: 5rem;
-    overflow: hidden;
-    height: 70vh;
-    margin-bottom: 5rem;
+header {
+  position: relative;
+  top: 5rem;
+  overflow: hidden;
+  height: 70vh;
+  margin-bottom: 5rem;
 }
-.header__container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    gap: 5rem;
-    height: 100%;
+.header__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 5rem;
+  height: 100%;
 }
 
 .header__left p {
-    margin:  1rem 0 2.4rem;
+  margin: 1rem 0 2.4rem;
 }
-
 
 /* ===================== CATEGORIES====================*/
 
-.categories{
-    background: var(--color-bg);
+.categories {
+  background: var(--color-bg1);
+  height: 29rem;
 }
 .categories h1 {
-    line-height: 1;
+  line-height: 1;
+  margin-bottom: 3rem;
+}
+.categories__container {
+  display: grid;
+  grid-template-columns: 40% 60%;
+}
+.categories__left {
+  margin-right: 4rem;
+}
+.categories__left p {
+  margin: 1rem 0 3rem;
+}
+.categories__right {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.2rem;
+}
+.category {
+  background: var(--color-bg2);
+  padding: 2rem;
+  border-radius: 2rem;
+  transition: var(--transition);
+}
+.category:hover {
+  box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+.category:nth-child(2) .category__icon {
+  background: var(--color-danger);
+}
+.category:nth-child(3) .category__icon{
+  background: var(--color-success);
+}
+.category:nth-child(4) .category__icon{
+  background: var(--color-warning);
+}
+.category:nth-child(5) .category__icon{
+  background: var(--color-success);
+}
+.category__icon {
+  background: var(--color-primary);
+  padding: 0.7rem;
+  border-radius: 0.9rem;
+}
+
+.category h5 {
+  margin: 2rem 0 1rem;
+}
+
+.category p {
+  font-size: 0.85rem;
 }
