--- a/Components/Pages/index.html
+++ b/Components/Pages/index.html
@@ -75,75 +75,243 @@
           <!-- Category 1 -->
           <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i></span>
-              <h5>BlockChain</h5>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
-                facilis.
-              </p>
+              <i class="uil uil-bitcoin-circle"></i
+            ></span>
+            <h5>BlockChain</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+              facilis.
+            </p>
           </article>
           <!-- Category 2 -->
           <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i></span>
-              <h5>Graphic Design</h5>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
-                facilis.
-              </p>
+              <i class="uil uil-bitcoin-circle"></i
+            ></span>
+            <h5>Graphic Design</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+              facilis.
+            </p>
           </article>
           <!-- Category 3-->
           <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i></span>
-              <h5>Finance</h5>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
-                facilis.
-              </p>
+              <i class="uil uil-bitcoin-circle"></i
+            ></span>
+            <h5>Finance</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+              facilis.
+            </p>
           </article>
           <!-- Category 4-->
           <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i></span>
-              <h5>Marketing</h5>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
-                facilis.
-              </p>
+              <i class="uil uil-bitcoin-circle"></i
+            ></span>
+            <h5>Marketing</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+              facilis.
+            </p>
           </article>
           <!-- Category 5 -->
           <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i></span>
-              <h5>Music</h5>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
-                facilis.
-              </p>
+              <i class="uil uil-bitcoin-circle"></i
+            ></span>
+            <h5>Music</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+              facilis.
+            </p>
           </article>
           <!-- Category 6-->
           <article class="category">
             <span class="category__icon">
-              <i class="uil uil-bitcoin-circle"></i></span>
-              <h5>BlockChain</h5>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
-                facilis.
-              </p>
+              <i class="uil uil-bitcoin-circle"></i
+            ></span>
+            <h5>BlockChain</h5>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo,
+              facilis.
+            </p>
           </article>
         </div>
       </div>
     </section>
 
- <!--=================END OF CATEGORY=================-->
+    <!--=================END OF CATEGORY=================-->
 
+    <section class="courses">
+      <h2>Our Popular Courses</h2>
+      <div class="container courses__container">
+        <!-- Course 1 -->
+        <article class="course">
+          <div class="course__image">
+            <img src="/images/course1.jpg" />
+          </div>
+          <div class="course__info">
+            <h4>Responsive SocialMedia Website UI Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+              numquam, consectetur tenetur harum magnam exercitationem
+              explicabo?
+            </p>
+            <a href="course.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+        <!-- Course 2 -->
+        <article class="course">
+          <div class="course__image">
+            <img src="/images/course2.jpg" />
+          </div>
+          <div class="course__info">
+            <h4>Responsive SmartHome Website Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+              numquam, consectetur tenetur harum magnam exercitationem
+              explicabo?
+            </p>
+            <a href="course.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+        <!-- Course 3 -->
+        <article class="course">
+          <div class="course__image">
+            <img src="/images/course3.jpg" />
+          </div>
+          <div class="course__info">
+            <h4>Responsive Admin Dashboard UI Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+              numquam, consectetur tenetur harum magnam exercitationem
+              explicabo?
+            </p>
+            <a href="course.html" class="btn btn-primary">Learn More</a>
+          </div>
+        </article>
+      </div>
+    </section>
+    <!--=================END OF COURSES=================-->
 
+    <section class="faqs">
+      <div class="container faqs__container">
+        <!-- FaQ 1 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
 
+        <!-- FaQ 2 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
 
+        <!-- FaQ 3 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
 
+        <!-- FaQ 4 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
 
+        <!-- FaQ 5 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
 
-<script src="../Main.js"></script>
+        <!-- FaQ 6 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
+
+        <!-- FaQ 7 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
+
+        <!-- FaQ 8 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
+
+        <!-- FaQ 9 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
+
+        <!-- FaQ 10 -->
+        <article class="faq">
+          <div class="faq__icon">
+            <i class="uil uil-plus"></i>
+          </div>
+          <div class="question__answer">
+            <h4>How do I know the right courses for me?</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+          </div>
+        </article>
+
+      </div>
+    </section>
+    <!--=================END OF FAQs=================-->
+
+    <script src="../Main.js"></script>
   </body>
 </html>
