--- a/Components/Pages/index.html
+++ b/Components/Pages/index.html
@@ -37,7 +37,7 @@
         <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
       </div>
     </nav>
-    <!---=======================END OF NAVBAR=====================-->
+    <!---================ END OF NAVBAR =====================-->
 
     <header>
       <div class="container header__container">
@@ -57,7 +57,7 @@
         </div>
       </div>
     </header>
-    <!--=================END OF HEADER=================-->
+    <!--================= END OF HEADER =====================-->
 
     <section class="categories">
       <div class="container categories__container">
@@ -142,7 +142,7 @@
       </div>
     </section>
 
-    <!--=================END OF CATEGORY=================-->
+    <!--================= END OF CATEGORY ==================-->
 
     <section class="courses">
       <h2>Our Popular Courses</h2>
@@ -194,12 +194,13 @@
         </article>
       </div>
     </section>
-    <!--=================END OF COURSES=================-->
+    <!--================= END OF COURSES ===================-->
 
     <section class="faqs">
+      <h2>Frequently Asked Questions</h2>
       <div class="container faqs__container">
         <!-- FaQ 1 -->
-        <article class="faq">
+        <article class="faq ">
           <div class="faq__icon">
             <i class="uil uil-plus"></i>
           </div>
@@ -310,7 +311,7 @@
 
       </div>
     </section>
-    <!--=================END OF FAQs=================-->
+    <!--================= END OF FAQs =====================-->
 
     <script src="../Main.js"></script>
   </body>
