testimonial section added

--- a/Components/Pages/index.html
+++ b/Components/Pages/index.html
@@ -22,6 +22,11 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- SWIPER JS CDN-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <nav>
@@ -200,13 +205,18 @@
       <h2>Frequently Asked Questions</h2>
       <div class="container faqs__container">
         <!-- FaQ 1 -->
-        <article class="faq ">
+        <article class="faq">
           <div class="faq__icon">
             <i class="uil uil-plus"></i>
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
 
@@ -217,7 +227,12 @@
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
 
@@ -228,7 +243,12 @@
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
 
@@ -239,7 +259,12 @@
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
 
@@ -250,7 +275,12 @@
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
 
@@ -261,7 +291,12 @@
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
 
@@ -272,7 +307,12 @@
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
 
@@ -283,7 +323,12 @@
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
 
@@ -294,7 +339,12 @@
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
 
@@ -305,14 +355,136 @@
           </div>
           <div class="question__answer">
             <h4>How do I know the right courses for me?</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde cumque, minima nam temporibus doloremque natus fuga sint obcaecati dolore eligendi, aspernatur, nobis expedita molestias quod! Placeat vero excepturi est voluptatibus!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+              cumque, minima nam temporibus doloremque natus fuga sint obcaecati
+              dolore eligendi, aspernatur, nobis expedita molestias quod!
+              Placeat vero excepturi est voluptatibus!
+            </p>
           </div>
         </article>
-
       </div>
     </section>
     <!--================= END OF FAQs =====================-->
 
+    <section class="container testimonials__Container mySwiper">
+      <h2>Student's Testumonials</h2>
+      <div class="swiper-wrapper">
+        <!-- Testimonial 1 -->
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="/images/avatar1.jpg" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Daina Aye</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+              dolor molestias. Nostrum, eligendi, quaerat hic sunt accusantium
+              velit in blanditiis eaque quae quam non molestias, possimus sequi
+              odio perferendis officia?
+            </p>
+          </div>
+        </article>
+        <!-- Testimonial 2 -->
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="/images/avatar2.jpg" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Ernest Achiver</h5>
+            <small>Web Developer</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+              dolor molestias. Nostrum, eligendi, quaerat hic sunt accusantium
+              velit in blanditiis eaque quae quam non molestias, possimus sequi
+              odio perferendis officia?
+            </p>
+          </div>
+        </article>
+        <!-- Testimonial 3 -->
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="/images/avatar3.jpg" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Edem Quest</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+              dolor molestias. Nostrum, eligendi, quaerat hic sunt accusantium
+              velit in blanditiis eaque quae quam non molestias, possimus sequi
+              odio perferendis officia?
+            </p>
+          </div>
+        </article>
+        <!-- Testimonial 4 -->
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="/images/avatar4.jpg" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Hajia bintu</h5>
+            <small>Model</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+              dolor molestias. Nostrum, eligendi, quaerat hic sunt accusantium
+              velit in blanditiis eaque quae quam non molestias, possimus sequi
+              odio perferendis officia?
+            </p>
+          </div>
+        </article>
+        <!-- Testimonial 5 -->
+        <article class="testimonial swiper-slide">
+          <div class="avatar">
+            <img src="/images/avatar5.jpg" />
+          </div>
+          <div class="testimonial__info">
+            <h5>Daina Aye</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial__body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+              dolor molestias. Nostrum, eligendi, quaerat hic sunt accusantium
+              velit in blanditiis eaque quae quam non molestias, possimus sequi
+              odio perferendis officia?
+            </p>
+          </div>
+        </article>
+      </div>
+      <div class="swiper-pagination"></div>
+    </section>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="../Main.js"></script>
+    <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 1,
+      spaceBetween: 30,
+      
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      // when window width is  >= 60px
+      breakpoints:{
+          600:{
+            slidesPerView: 2,
+          }
+        }
+    });
+  </script>
   </body>
 </html>
