--- a/Components/styles/styles.css
+++ b/Components/styles/styles.css
@@ -40,7 +40,7 @@ body {
   margin: 0 auto;
 }
 section {
-  padding-top: 6rem;
+  padding: 6rem 0 5rem;
   
 }
 
@@ -231,7 +231,6 @@ header {
 
 .courses{
   margin-top: 10rem;
-  margin-bottom: 5rem;
 }
 
 .courses__container{
@@ -295,4 +294,51 @@ header {
 }
 .faq.open p {
   display: block;
+}
+/* ===================== TESTIMONIAL ====================*/
+.testimonials__Container{
+  overflow-x: hidden;
+  position: relative;
+  margin-bottom: 5rem;
+}
+.testimonial {
+  padding-top: 2rem;
+}
+
+.avatar{
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto;
+  border: 1rem solid var(--color-bg1);
+}
+
+.testimonial__info{
+  text-align: center;
+}
+
+.testimonial__body{
+  background: var(--color-primary);
+  padding: 2rem;
+  margin-top: 3rem;
+  position: relative;
+}
+.testimonial__body::before{
+  content: "";
+  display: block;
+  background: linear-gradient(
+  135deg,
+  transparent,
+  var(--color-primary),
+  var(--color-primary),
+  var(--color-primary)
+  
+  );
+  width: 3rem;
+  height: 3rem;
+  position: absolute;
+  left: 50%;
+  top: -1.5rem;
+  transform: rotate(45deg);
 }
