--- a/Components/Pages/index.html
+++ b/Components/Pages/index.html
@@ -29,6 +29,7 @@
     />
   </head>
   <body>
+    <!---================  NAVBAR START =====================-->
     <nav>
       <div class="container nav__container">
         <a href="index.html"><h4>EGATOR</h4></a>
@@ -44,6 +45,7 @@
     </nav>
     <!---================ END OF NAVBAR =====================-->
 
+    <!--=================  HEADER START =====================-->
     <header>
       <div class="container header__container">
         <div class="header__left">
@@ -63,7 +65,7 @@
       </div>
     </header>
     <!--================= END OF HEADER =====================-->
-
+    <!--=================  CATEGORY START ==================-->
     <section class="categories">
       <div class="container categories__container">
         <div class="categories__left">
@@ -146,9 +148,9 @@
         </div>
       </div>
     </section>
-
     <!--================= END OF CATEGORY ==================-->
 
+    <!--=================  COURSES START ===================-->
     <section class="courses">
       <h2>Our Popular Courses</h2>
       <div class="container courses__container">
@@ -201,6 +203,7 @@
     </section>
     <!--================= END OF COURSES ===================-->
 
+    <!--=================  FAQs START=====================-->
     <section class="faqs">
       <h2>Frequently Asked Questions</h2>
       <div class="container faqs__container">
@@ -367,6 +370,7 @@
     </section>
     <!--================= END OF FAQs =====================-->
 
+    <!--================= TESTIMONIALS START =====================-->
     <section class="container testimonials__Container mySwiper">
       <h2>Student's Testumonials</h2>
       <div class="swiper-wrapper">
@@ -463,28 +467,79 @@
       </div>
       <div class="swiper-pagination"></div>
     </section>
-
-
+    <!--================= END OF TESTIMONIALS =====================-->
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__1">
+          <a href="index.html" class="footer__logo"><h4>EMATOR</h4></a>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            dolorem pariatur nihil impedit veritatis fugit consequatur quam
+            error id reiciendis?
+          </p>
+        </div>
+        <div class="footer__2">
+          <h4>PermaLinks</h4>
+          <ul class="permalinks">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="course.html">Courses</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer__3">
+          <h4>Privecy</h4>
+          <li><a href="#">Privecy Policy</a></li>
+          <li><a href="#">Terms & Conditions</a></li>
+          <li><a href="#">Refund Policy</a></li>
+        </div>
+        <div class="footer__4">
+          <h4>Contact Us</h4>
+          <div>
+            <p>+880 12345 67891</p>
+            <p>abc123@gmail.com</p>
+          </div>
+          <ul class="footer__socials">
+            <li>
+              <a href="#"><i class="uil uil-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="uil uil-instagram-alt"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="uil uil-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <small>Copyright EGATOR</small>
+      </div>
+    </footer>
+    <!--================= END OF FOOTER =====================-->
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="../Main.js"></script>
     <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 1,
-      spaceBetween: 30,
-      
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-      // when window width is  >= 60px
-      breakpoints:{
-          600:{
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 30,
+
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        // when window width is  >= 60px
+        breakpoints: {
+          600: {
             slidesPerView: 2,
-          }
-        }
-    });
-  </script>
+          },
+        },
+      });
+    </script>
   </body>
 </html>
